add Line bot, MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8082
+server.servlet.context-path=/line-bot
 
+line.bot.channel-token={channel-token}
+line.bot.channel-secret={channel-secret}
+line.bot.handler.path=/callback
+
+spring.data.mongodb.uri=mongodb://localhost:27017/test
